--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ mod_id=cuffed
 mod_name=Cuffed
 mod_license=All Rights Reserved
 # MAJOR VERSION . MINOR VERSION . PATCH VERSION
-mod_version=1.2.3
+mod_version=2.0.0
 mod_group_id=com.lazrproductions.cuffed
-mod_authors=Lazr Productions
+mod_authors=Paradox Corporation
 mod_description=A mod that adds handcuffs, keys, and more!
